--- a/Anchor.toml
+++ b/Anchor.toml
@@ -6,14 +6,19 @@ resolution = true
 skip-lint = false
 
 [programs.localnet]
-confidential_transfer_arcium_demo = "75MYEEgbXuUeXwUa834fhyAWgEtsjrajgWjiQj5Th3eF"
+confidential_transfer_arcium = "75MYEEgbXuUeXwUa834fhyAWgEtsjrajgWjiQj5Th3eF"
 
 [registry]
 url = "https://api.apr.dev"
 
 [provider]
 cluster = "localnet"
-wallet = "~/.config/solana/id.json"
+wallet = "./id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
+
+[test.validator]
+[[test.genesis]]
+address = "BKck65TgoKRokMjQM3datB9oRwJ8rAj2jxPXvHXUvcL6"
+program = "./arcium_program_0.1.47.so"
